[package]
name = "freak"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["cargo", "derive"] }
color-eyre = "0.6.2"
crossterm = "0.25.0"
smol_str = "0.1.23"
tui = "0.19.0"
unicode-segmentation = "1.10.1"


[profile.release]
debug = true